syntax = "proto3";

package user;

option go_package = "microservice-demo/proto/user";

// 用户服务定义
service UserService {
  // 获取用户信息
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  
  // 创建用户
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  
  // 更新用户
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  
  // 删除用户
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  
  // 获取用户列表
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

// 用户信息
message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string avatar = 5;
  string status = 6;
  string created_at = 7;
  string updated_at = 8;
}

// 获取用户请求
message GetUserRequest {
  int64 id = 1;
}

// 获取用户响应
message GetUserResponse {
  User user = 1;
  string message = 2;
  int32 code = 3;
}

// 创建用户请求
message CreateUserRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
}

// 创建用户响应
message CreateUserResponse {
  User user = 1;
  string message = 2;
  int32 code = 3;
}

// 更新用户请求
message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string avatar = 5;
}

// 更新用户响应
message UpdateUserResponse {
  User user = 1;
  string message = 2;
  int32 code = 3;
}

// 删除用户请求
message DeleteUserRequest {
  int64 id = 1;
}

// 删除用户响应
message DeleteUserResponse {
  string message = 1;
  int32 code = 2;
}

// 获取用户列表请求
message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  string search = 3;
}

// 获取用户列表响应
message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
  string message = 5;
  int32 code = 6;
}